<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.admin.AddStudent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"

        android:orientation="vertical">


        <TextView
            android:id="@+id/text_add_stud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/addStudent"
            android:textColor="@android:color/black"
            android:textSize="20dp">

        </TextView>

        <EditText
            android:id="@+id/addstudent_et_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/name"
            android:minHeight="48dp" />


        <EditText
            android:id="@+id/addstudent_et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:digits="1234567890"
            android:hint="@string/phoneNo"
            android:inputType="number"
            android:minHeight="48dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/addstudent_et_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/subject"
            android:minHeight="48dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/addstudent_et_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/user"
            android:minHeight="48dp"
            android:singleLine="true" />



        <EditText
            android:id="@+id/addstudent_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="18sp" />


    </LinearLayout>

</ScrollView>